4-apps/nginx-demo/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: blog-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: blog
---
apiVersion: v1
kind: Service
metadata:
  name: shop-svc
spec:
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: shop
