4-apps/nginx-demo/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-demo
  annotations:
    external-dns.alpha.kubernetes.io/hostname: demo-nginx.lpsm.dev
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - demo-nginx.lpsm.dev
      secretName: demo-nginx-tls-ingress
  rules:
    - host: demo-nginx.lpsm.dev
      http:
        paths:
          - path: /shop
            pathType: Prefix
            backend:
              service:
                name: shop-svc
                port:
                  number: 80
          - path: /blog
            pathType: Prefix
            backend:
              service:
                name: blog-svc
                port:
                  number: 80
